add advertisement section

--- a/src/css/_main.css
+++ b/src/css/_main.css
@@ -13,7 +13,7 @@
 
 @import url('./catalog.css');
 
-/* @import url('./advertisement.css'); */
+@import url('./advertisement.css');
 
 @import url('./sale.css');
 
