--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,5 +1,18 @@
-<section class="advert">
-  <div class="container">
-    <!-- enter your code here -->
+<section id="advert" class="section container">
+  <div class="adver-container">
+    <h2 class="visually-hidden">Advertisement</h2>
+
+    <p class="adver-text">
+      Choose <span class="adver-text-style">your story</span>, making every
+      moment unique. Time is your style, and we reveal it.
+    </p>
+
+    <a
+      href="#contact"
+      class="adver-contact"
+      aria-label="link to section contact"
+    >
+      Contact Us
+    </a>
   </div>
 </section>
