--- a/src/partials/revievs.html
+++ b/src/partials/revievs.html
@@ -1,71 +1,107 @@
 <section class="section-reviews" id="reviews">
   <div class="container">
     <h2 class="reviews-title" tabindex="0">Reviews</h2>
-    <ul class="reviews-list">
-      <li class="reviews-item">
-        <picture>
+
+    <div class="slide">
+      <input type="radio" name="pic" id="pic1" checked />
+      <input type="radio" name="pic" id="pic2" />
+      <input type="radio" name="pic" id="pic3" />
+
+      <ul class="reviews-list">
+        <li class="reviews-item">
+          <picture>
+            <img
+              srcset="
+                /img/reviews/reviews-john@1x.png 1x,
+                /img/reviews/reviews-john@2x.png 2x
+              "
+              src="/img/reviews/reviews-john@1x.png"
+              alt="person"
+              class="reviews-image"
+              width="56"
+              height="56"
+              loading="lazy"
+            />
+          </picture>
+          <h3 class="reviews-author">John Wax</h3>
+          <p class="reviews-text">
+            Buying a watch from was the best choice for me. The design is
+            perfectly combined with high quality materials. The strap fits
+            nicely on the hand,and &nbsp; the mechanism works flawlessly.
+          </p>
+        </li>
+
+        <li class="reviews-item">
           <img
             srcset="
-              /img/reviews/reviews-john@1x.png 1x,
-              /img/reviews/reviews-john@2x.png 2x
+              /img/reviews/reviews-victoria@1x.png 1x,
+              /img/reviews/reviews-victoria@2x.png 2x
             "
-            src="/img/reviews/reviews-john@1x.png"
+            src="/img/reviews/reviews-victoria@1x.png"
             alt="person"
             class="reviews-image"
             width="56"
             height="56"
             loading="lazy"
           />
-        </picture>
-        <h3 class="reviews-author">John Wax</h3>
-        <p class="reviews-text">
-          Buying a watch from was the best choice for me. The design is
-          perfectly combined with high quality materials. The strap fits nicely
-          on the hand, and the mechanism works flawlessly.
-        </p>
-      </li>
+          <h3 class="reviews-author">Victoria Romashenko</h3>
+          <p class="reviews-text">
+            Can't take my eyes off my watch from. Every time I put it on, it is
+            admired by those around me. The build quality and attention to
+            detail make it a real gem among my accessories.
+          </p>
+        </li>
 
-      <li class="reviews-item">
-        <img
-          srcset="
-            /img/reviews/reviews-victoria@1x.png 1x,
-            /img/reviews/reviews-victoria@2x.png 2x
-          "
-          src="/img/reviews/reviews-victoria@1x.png"
-          alt="person"
-          class="reviews-image"
-          width="56"
-          height="56"
-          loading="lazy"
-        />
-        <h3 class="reviews-author">Victoria Romashenko</h3>
-        <p class="reviews-text">
-          Can't take my eyes off my watch from. Every time I put it on, it is
-          admired by those around me. The build quality and attention to detail
-          make it a real gem among my accessories.
-        </p>
-      </li>
+        <li class="reviews-item">
+          <img
+            srcset="
+              /img/reviews/reviews-anastasia@1x.png 1x,
+              /img/reviews/reviews-anastasia@2x.png 2x
+            "
+            src="/img/reviews/reviews-anastasia@1x.png"
+            alt="person"
+            class="reviews-image"
+            width="56"
+            height="56"
+            loading="lazy"
+          />
+          <h3 class="reviews-author">Anastasia Trachuk</h3>
+          <p class="reviews-text">
+            My watch from is a real masterpiece. Every detail impresses with the
+            high quality of execution. Special features like [specify features]
+            make it an indispensable companion in my daily life.
+          </p>
+        </li>
 
-      <li class="reviews-item">
-        <img
-          srcset="
-            /img/reviews/reviews-anastasia@1x.png 1x,
-            /img/reviews/reviews-anastasia@2x.png 2x
-          "
-          src="/img/reviews/reviews-anastasia@1x.png"
-          alt="person"
-          class="reviews-image"
-          width="56"
-          height="56"
-          loading="lazy"
-        />
-        <h3 class="reviews-author">Anastasia Trachuk</h3>
-        <p class="reviews-text">
-          My watch from is a real masterpiece. Every detail impresses with the
-          high quality of execution. Special features like [specify features]
-          make it an indispensable companion in my daily life.
-        </p>
-      </li>
-    </ul>
+        <li class="reviews-item">
+          <picture>
+            <img
+              srcset="
+                /img/reviews/reviews-john@1x.png 1x,
+                /img/reviews/reviews-john@2x.png 2x
+              "
+              src="/img/reviews/reviews-john@1x.png"
+              alt="person"
+              class="reviews-image"
+              width="56"
+              height="56"
+              loading="lazy"
+            />
+          </picture>
+          <h3 class="reviews-author">John Wax</h3>
+          <p class="reviews-text">
+            Buying a watch from was the best choice for me. The design is
+            perfectly combined with high quality materials. The strap fits
+            nicely on the hand,and &nbsp; the mechanism works flawlessly.
+          </p>
+        </li>
+      </ul>
+
+      <div class="switch-button">
+        <label for="pic1"></label>
+        <label for="pic2"></label>
+        <label for="pic3"></label>
+      </div>
+    </div>
   </div>
 </section>
