--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,12 +1,12 @@
 <section class="mobile-menu-section">
   <div class="container">
     <div class="mobile-menu">
-<<<<<<< HEAD
-      <button type="button" class="mobile-menu-close-btn js-mobile-menu" aria-label="button to close menu">
-        <svg class="mobile-menu-close-icon" width="17" height="17">
-=======
- 
->>>>>>> main
+      <button
+        type="button"
+        class="mobile-menu-close-btn js-mobile-menu"
+        aria-label="button to close menu"
+      >
+        <svg class="mobile-menu-close-icon" width="34" height="34">
           <use href="/img/sprite.svg#icon-close"></use>
         </svg>
       </button>
@@ -73,12 +73,3 @@
     </div>
   </div>
 </section>
-
-<script>
-  // mobile-menu toggle
-  document.querySelectorAll('.js-mobile-menu').forEach(btn => {
-    btn.addEventListener('click', () => {
-      document.querySelector('.mobile-menu').classList.toggle('is-open');
-    });
-  });
-</script>
