--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,4 +1,4 @@
-<section id="advert" class="section container">
+<section id="advert" class="adv-section container">
   <div class="adver-container">
     <h2 class="visually-hidden">Advertisement</h2>
 
