fix hero background

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -98,8 +98,8 @@
           src="/img/hero/hero-bg-mob-min.png"
           alt="picture of watch"
           class="hero-bg-img"
-          width="1150px"
-          height="500px"
+          width="1150"
+          height="500"
         />
       </picture>
     </div>
