add h2 and fix comment

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<!--- Footer by Taras Pererva --->
+<!-- Footer by Taras Pererva -->
 
 <footer id="footer" class="footer">
   <div class="footer-container">
