--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -1,6 +1,6 @@
 <section class="mobile-menu-section">
   <div class="container">
-    <h2 class="visually-hidden"></h2>
+    <h2 class="visually-hidden">Mobile menu section</h2>
     <div class="mobile-menu">
       <button
         type="button"
