--- a/src/css/base.css
+++ b/src/css/base.css
@@ -3,6 +3,7 @@
   src: url(../fonts/Gilroy-Regular.woff) format('woff');
   font-weight: 400;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -10,6 +11,7 @@
   src: url(../fonts/Gilroy-Medium.woff) format('woff');
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -17,6 +19,7 @@
   src: url(../fonts/Gilroy-Semibold.woff) format('woff');
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +27,7 @@
   src: url(../fonts/Gilroy-Bold.woff) format('woff');
   font-weight: 700;
   font-style: normal;
+  font-display: swap;
 }
 
 html {
