--- a/src/css/hero.css
+++ b/src/css/hero.css
@@ -8,6 +8,10 @@
   margin-bottom: 28px;
 }
 
+.hero-top-wrapper {
+  margin-bottom: 28px;
+}
+
 .hero-title {
   font-size: 40px;
   font-weight: 600;
@@ -27,20 +31,31 @@
   line-height: 1.3;
   letter-spacing: -0.02em;
   color: rgba(12, 12, 12, 0.7);
-  margin-bottom: 28px;
 }
 
 .hero-top-side {
   width: 100%;
-  display: flex;
+  height: 44px;
+  position: relative;
 }
 
 .hero-side-list {
   display: flex;
+  position: relative;
 }
 
-.hero-side-item:not(:first-child) {
-  margin-left: -12px;
+.hero-side-item {
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.hero-side-item:nth-child(2) {
+  left: 32px;
+}
+
+.hero-side-item:nth-child(3) {
+  left: 64px;
 }
 
 .hero-top-scroll {
@@ -53,8 +68,9 @@
   text-decoration: underline;
   text-underline-offset: 3px;
 
-  align-self: flex-end;
-  margin-left: auto;
+  position: absolute;
+  bottom: 0;
+  right: 0;
 
   transition: color 250ms ease-in-out;
 }
@@ -113,23 +129,24 @@
     max-width: 480px;
     font-size: 16px;
     line-height: 1.25;
-    margin-bottom: 0;
   }
 
   .hero-top-side {
-    display: flex;
-    flex-direction: column;
     width: 136px;
-    min-height: 100%;
+    height: 260px;
+  }
+
+  .hero-side-item:nth-child(2) {
+    left: 41px;
+  }
+
+  .hero-side-item:nth-child(3) {
+    left: 80px;
   }
 
   .hero-side-avatar {
     width: 56px;
     height: 56px;
-  }
-
-  .hero-side-item:not(:first-child) {
-    margin-left: -15px;
   }
 
   .hero-top-scroll {
