--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -49,6 +49,7 @@
           alt="garmin-watch"
           width="704"
           height="512"
+          loading="lazy"
         />
       </picture>
     </div>
