--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -18,19 +18,44 @@
           >
         </li>
         <li class="header-nav-list-item">
-          <a class="header-nav-link" href="#about">About Us</a>
+          <a
+            class="header-nav-link"
+            href="#about"
+            aria-label="link to section about"
+            >About Us</a
+          >
         </li>
         <li class="header-nav-list-item">
-          <a class="header-nav-link" href="#catalog">Catalog</a>
+          <a
+            class="header-nav-link"
+            href="#catalog"
+            aria-label="link to section catalog"
+            >Catalog</a
+          >
         </li>
         <li class="header-nav-list-item">
-          <a class="header-nav-link" href="#sale">Sale</a>
+          <a
+            class="header-nav-link"
+            href="#sale"
+            aria-label="link to section sale"
+            >Sale</a
+          >
         </li>
         <li class="header-nav-list-item">
-          <a class="header-nav-link" href="#reviews">Reviews</a>
+          <a
+            class="header-nav-link"
+            href="#reviews"
+            aria-label="link to section reviews"
+            >Reviews</a
+          >
         </li>
         <li class="header-nav-list-item">
-          <a class="header-nav-link" href="#contact">Contact Us</a>
+          <a
+            class="header-nav-link"
+            href="#contact"
+            aria-label="link to section contact"
+            >Contact Us</a
+          >
         </li>
       </ul>
     </nav>
