--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -27,6 +27,7 @@
               aria-label="person's avatar"
               width="44"
               height="44"
+              loading="lazy"
             />
           </li>
           <li class="hero-side-item">
@@ -41,6 +42,7 @@
               aria-label="person's avatar"
               width="44"
               height="44"
+              loading="lazy"
             />
           </li>
           <li class="hero-side-item">
@@ -55,6 +57,7 @@
               aria-label="person's avatar"
               width="44"
               height="44"
+              loading="lazy"
             />
           </li>
         </ul>
@@ -100,6 +103,7 @@
           class="hero-bg-img"
           width="1150"
           height="500"
+          loading="lazy"
         />
       </picture>
     </div>
