--- a/src/partials/sale.html
+++ b/src/partials/sale.html
@@ -26,6 +26,8 @@
                 alt="An example of our production"
                 class="sale-item-img"
                 width="96"
+                height="100"
+                loading="lazy"
               />
             </picture>
           </div>
@@ -52,6 +54,8 @@
                 alt="An example of our production"
                 class="sale-item-img"
                 width="96"
+                height="100"
+                loading="lazy"
               />
             </picture>
           </div>
@@ -78,6 +82,8 @@
                 alt="An example of our production"
                 class="sale-item-img"
                 width="96"
+                height="100"
+                loading="lazy"
               />
             </picture>
           </div>
@@ -104,6 +110,8 @@
                 alt="An example of our production"
                 class="sale-item-img"
                 width="96"
+                height="100"
+                loading="lazy"
               />
             </picture>
           </div>
@@ -131,6 +139,8 @@
               alt="An example of our production"
               class="sale-img-item"
               width="328"
+              height="398"
+              loading="lazy"
             />
           </picture>
         </div>
