--- a/src/partials/catalog.html
+++ b/src/partials/catalog.html
@@ -30,6 +30,8 @@
             src="/img/catalog/catalogmob/cat-mob-min.webp"
             alt="Garmin Fenix"
             width="292"
+            height="292"
+            loading="lazy"
           />
         </picture>
 
@@ -65,6 +67,8 @@
             src="/img/catalog/catalogmob/cat-mob2-min.webp"
             alt="Garmin Marq"
             width="292"
+            height="292"
+            loading="lazy"
           />
         </picture>
         <h3 class="catalog-text">Garmin Marq Athlete</h3>
@@ -98,6 +102,8 @@
             src="/img/catalog/catalogmob/cat-mob3-min.webp"
             alt="Garmin Descent"
             width="292"
+            height="292"
+            loading="lazy"
           />
         </picture>
 
@@ -132,6 +138,8 @@
             src="/img/catalog/catalogmob/cat-mob4-min.webp"
             alt="Garmin D2"
             width="292"
+            height="292"
+            loading="lazy"
           />
         </picture>
 
@@ -160,6 +168,8 @@
             src="/img/catalog/catalog.desk/cat5desk-min.webp"
             alt="Garmin Fenix"
             width="292"
+            height="292"
+            loading="lazy"
           />
         </picture>
 
@@ -188,6 +198,8 @@
             src="/img/catalog/catalog.desk/cat6desk-min.webp"
             alt="Garmin D2"
             width="292"
+            height="292"
+            loading="lazy"
           />
         </picture>
 
@@ -196,7 +208,7 @@
       </li>
     </ul>
 
-    <button aria-label="button to show more" class="btn-catalog" type="button">
+    <button class="btn-catalog" type="button" aria-label="button to show more">
       Show more
     </button>
   </div>
