--- a/src/css/catalog.css
+++ b/src/css/catalog.css
@@ -9,7 +9,7 @@
   line-height: 1;
   letter-spacing: -0.02em;
   color: #0c0c0c;
-  font-family: (--font-family);
+  font-family: var(--font-family);
 }
 
 .catalog-list {
