add container;fix line height

--- a/src/partials/advertisement.html
+++ b/src/partials/advertisement.html
@@ -1,18 +1,20 @@
-<section id="advert" class="adv-section container">
-  <div class="adver-container">
-    <h2 class="visually-hidden">Advertisement</h2>
+<section class="adv-section" id="advert">
+  <div class="container">
+    <div class="adver-container">
+      <h2 class="visually-hidden">Advertisement</h2>
 
-    <p class="adver-text">
-      Choose <span class="adver-text-style">your story</span>, making every
-      moment unique. Time is your style, and we reveal it.
-    </p>
+      <p class="adver-text">
+        Choose <span class="adver-text-style">your story</span>, making every
+        moment unique. Time is your style, and we reveal it.
+      </p>
 
-    <a
-      href="#contact"
-      class="adver-contact"
-      aria-label="link to section contact"
-    >
-      Contact Us
-    </a>
+      <a
+        href="#contact"
+        class="adver-contact"
+        aria-label="link to section contact"
+      >
+        Contact Us
+      </a>
+    </div>
   </div>
 </section>
