--- a/src/css/header.css
+++ b/src/css/header.css
@@ -110,27 +110,31 @@
 .header-social-list-item {
   width: 36px;
   height: 36px;
-  border: 1px solid rgba(12, 12, 12, 0.1);
-  border-radius: 10px;
-  padding: 8px;
-  transition: border-color 0.3s ease-in-out;
 }
 .header-social-list-item:hover,
 .header-social-list-item:focus {
   border-color: rgba(51, 80, 233, 0.1);
 }
+
 .header-social-link {
   display: flex;
   align-items: center;
   justify-content: center;
+  border: 1px solid rgba(12, 12, 12, 0.1);
+  border-radius: 10px;
+  transition: border-color 0.3s ease-in-out;
+  width: 100%;
+  height: 100%;
 }
 .header-social-img {
   fill: #0c0c0c;
   opacity: 0.8;
 }
-.header-social-img:hover,
-.header-social-img:focus {
+.header-social-list-item:hover .header-social-img,
+.header-social-list-item:focus .header-social-img {
+  opacity: 0,8;
   fill: #3350e9;
 }
+
 
 /* #endregion header */
