add button to scroll up and change anchor in the footer link

--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -72,7 +72,7 @@
           <ul class="footer-nav-list">
             <li class="footer-nav-item">
               <a
-                href="./index.html"
+                href="#hero"
                 aria-label="link to main page"
                 class="footer-nav-link"
                 >Home</a
